@@ -75,6 +75,14 @@ class GridFrame : public wxFrame
     void OnAddToSelectToggle(wxCommandEvent& event);
     void OnShowSelection(wxCommandEvent& event);
 
+    void AutoSizeRow(wxCommandEvent& event);
+    void AutoSizeCol(wxCommandEvent& event);
+    void AutoSizeRowLabel(wxCommandEvent& event);
+    void AutoSizeColLabel(wxCommandEvent& event);
+    void AutoSizeLabelsCol(wxCommandEvent& event);
+    void AutoSizeLabelsRow(wxCommandEvent& event);
+    void AutoSizeTable(wxCommandEvent& event);
+
     void OnLabelLeftClick( wxGridEvent& );
     void OnCellLeftClick( wxGridEvent& );
     void OnRowSize( wxGridSizeEvent& );
@@ -148,6 +156,13 @@ public:
         ID_DESELECT_ROW,
         ID_DESELECT_COL,
         ID_DESELECT_CELL,
+        ID_SIZE_ROW,
+        ID_SIZE_COL,
+        ID_SIZE_ROW_LABEL,
+        ID_SIZE_COL_LABEL,
+        ID_SIZE_LABELS_COL,
+        ID_SIZE_LABELS_ROW,
+        ID_SIZE_GRID,
 
         ID_SET_HIGHLIGHT_WIDTH,
         ID_SET_RO_HIGHLIGHT_WIDTH,
